update for deploying